now hides the start button and replaces with reset once the timer has started

--- a/source/index.html
+++ b/source/index.html
@@ -11,10 +11,12 @@
 <body>
     <div id = "timer">
         <h2 id = "phaseDisplay"> Work </h2>
-        <p id = "timerDisplay">0:00</p>
+        <p id = "timerDisplay">00:00</p>
     </div>
 
-    <button onclick="start()">start</button>
+    <button id = "start" onclick="start()">start</button>
+    <button id = "reset" onclick="reset()">reset</button>
+
 
     <div id = "taskAdder">
         <input id = "task">
