--- a/source/index.html
+++ b/source/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+    <div class = "mode">
+      <button class = "darkModeButton" id = "dark-mode-button"  onclick="toggle_light_mode()">Dark Mode </button>
+    </div>
+    	
+
     <div id = "timer">
         <h2 id = "phaseDisplay"> Work </h2>
         <p id = "timerDisplay">0:00</p>
@@ -22,7 +27,23 @@
     </div>
 </body>
 
+<script>
+  function toggle_light_mode() {
+      var app = document.getElementsByTagName("BODY")[0];
+      if (localStorage.lightMode == "dark") {
+        localStorage.lightMode = "light";
+        app.setAttribute("data-light-mode", "light");
+      } else {
+        localStorage.lightMode = "dark";
+        app.setAttribute("data-light-mode", "dark");
+      }
+  }
 
+  var app = document.getElementsByTagName("BODY")[0];
+  if (localStorage.lightMode == "dark") {
+      app.setAttribute("data-light-mode", "dark");
+  }
+</script>
 
 
 </html>
