--- a/source/index.html
+++ b/source/index.html
@@ -20,20 +20,20 @@
 
 
     <div id = "taskAdder">
-        <input id = "task">
+        <input id = "task" required>
         <button id = "taskAdder" onclick="addTask()">Add Task</button>
     </div>
 
     <label id = "listTasks"></label>
 
-    <input id="work-slider" name="work-slider" type="range" min="0" max="30"
-    value="25"> Work Time
+    <!--input id="work-slider" name="work-slider" type="range" min="0" max="30"
+    value="25"-->
 
-    <input id="small-slider" name="small-slider" type="range" min="0" max="30"
-    value="5"> Small Time
+    <!--input id="small-slider" name="small-slider" type="range" min="0" max="30"
+    value="5"-->
 
-    <input id="big-slider" name="big-slider" type="range" min="0" max="30"
-    value="15"> Big Time
+    <!--input id="big-slider" name="big-slider" type="range" min="0" max="30"
+    value="15"-->
 
 
 
