--- a/source/index.html
+++ b/source/index.html
@@ -19,9 +19,9 @@
         <p id = "timerDisplay">00:00</p>
     </div>
 
-    <button id = "start" onclick="start()" disabled>start</button>
-    <button id = "reset" onclick="reset()" disabled>reset</button>
-    <button id = "skip" onclick="skip()">skip</button>
+    <button id = "start" class = "controlButton" onclick="start()" disabled>start</button>
+    <button id = "reset" class = "controlButton" onclick="reset()" disabled>reset</button>
+    <button id = "skip"  class = "controlButton" onclick="skip()">skip</button>
 
 
     <div id = "taskAdder">
