--- a/source/index.html
+++ b/source/index.html
@@ -23,10 +23,10 @@
     <button id = "reset" class = "controlButton" onclick="reset()" disabled>reset</button>
     <button id = "skip"  class = "controlButton" onclick="skip()">skip</button>
 
-    <div id = "taskAdder">
-        <input id = "task" required>
-        <button id = "taskAdder" onclick="addTask()">Add Task</button>
-    </div>
+    <form id = "taskAdder" action=":javascript:addTask()">
+        <input id = "task" placeholder="[ Enter Task ]" style="text-align:center">
+        <button id = "taskAdder" onclick="addTask()" style="display:none">Add Task</button>
+    </form>
 
     <label id = "listTasks"></label>
 
