--- a/source/index.html
+++ b/source/index.html
@@ -30,6 +30,10 @@
 
     <label id = "listTasks"></label>
 
+    <ul id ="allTasks">
+        
+    </ul>
+
     <!--input id="work-slider" name="work-slider" type="range" min="0" max="30"
     value="25"-->
 
