--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,7 @@
     <button id = "reset" class = "controlButton" onclick="reset()" disabled>reset</button>
     <button id = "skip"  class = "controlButton" onclick="skip()">skip</button>
 
-    <form id = "taskAdder" action=":javascript:addTask()">
+    <form id = "taskAdder" action="javascript:addTask()">
         <input id = "task" placeholder="[ Enter Task ]" style="text-align:center">
         <button id = "taskAdder" onclick="addTask()" style="display:none">Add Task</button>
     </form>
