fix minor error on displaying tasks

--- a/source/potato.html
+++ b/source/potato.html
@@ -32,6 +32,8 @@
         </div>
         <label id = "listTasks"></label>
 
+        <ul id ="allTasks">
+
         <!-- End of content wrapper -->
     </div>
 
