--- a/source/potato.html
+++ b/source/potato.html
@@ -40,7 +40,7 @@
         <p>Settings</p>
         <p class="close" id="close-settings">Close</p>
         <div class="choose-theme" id="choose-theme">
-            <button id="theme-light" onclick="light()">Light Theme</button>
+            <button id="theme-dark" onclick="light()">Light Theme</button>
             <button id="theme-dark" onclick="dark()">Dark Theme</button>
             <button id="theme-potato" onclick="potato()">Potato Theme</button>
         </div>
@@ -86,13 +86,38 @@
 
 </body>
 
+<div class="bg" id="bg">
+</div>
+
 <script>
+    /* save user's preference locally after theme changing */
+    // function LoadData() {
+    //     let theme = window.localStorage.getItem('theme');
+    //     const app = document.getElementsByTagName("BODY")[0];
+    //     if (!theme) {
+    //         app.setAttribute("data-light-mode", "potato");
+    //         window.localStorage.setItem('theme', 'potato');
+    //         console.log('null');
+    //     } else if (theme == 'potato'){
+    //         potato();
+    //         window.localStorage.setItem('theme', 'potato');
+    //         console.log('potato');
+    //     } else if (theme == 'dark'){
+    //         dark();
+    //         window.localStorage.setItem('theme', 'dark');
+    //         console.log('dark');
+    //     } else if (theme == 'light'){
+    //         light();
+    //         window.localStorage.setItem('theme', 'light');
+    //         console.log('light');
+    //     }
+    // }
+
     window.onload = function () {
         const settings = document.getElementById('settings-icon');
         settings.addEventListener("click", function () {
             document.getElementById('settings-menu').style.display = 'block';
         });
-
         const closeSettings = document.getElementById('close-settings');
         closeSettings.addEventListener('click', function () {
             document.getElementById('settings-menu').style.display = 'none';
@@ -110,40 +135,35 @@
 
         const volumeIcon = document.getElementById('volume-icon');
         volumeIcon.addEventListener('click', mute());
-        
+
         const app = document.getElementsByTagName("BODY")[0];
         app.setAttribute("data-light-mode", "potato");
-        // Moved the default setting into the on-page load.
 
-        /* refresh issue */
-        // if (localStorage.mode == 'dark'){
-        //   dark();
-        // } else if (localStorage.mode == 'light') {
-        //   light();
-        // } else if (localStograge.mode == 'potato') {
-        //   potato();
-        // }
+        // deciding on which theme to use
+        // LoadData();
     }
 
     function potato() {
+        window.localStorage.setItem('theme', 'potato');
         var app = document.getElementsByTagName("BODY")[0];
         app.setAttribute("data-light-mode", "potato");
+        var bg = document.getElementById("bg");
+        bg.style.backgroundImage = 'url("img/background.png")';
+        bg.style.background = '100% center no-repeat cover'
         var circle = document.getElementById('circle');
         circle.style.backgroundColor = '#ff0';
         circle.style["boxShadow"] = '0 0 20px 20px #ff0';
         circle.style.border = '5px solid #ff0';
 
         /* buttons */
-        var btn1 = document.getElementsByTagName("button")[0];
-        btn1.setAttribute("mode", "potato");
-        var btn2 = document.getElementsByTagName("button")[1];
-        btn2.setAttribute("mode", "potato");
-        var btn3 = document.getElementsByTagName("button")[2];
-        btn3.setAttribute("mode", "potato");
-        var btn4 = document.getElementsByTagName("button")[3];
-        btn4.setAttribute("mode", "potato");
-        var btn5 = document.getElementsByTagName("button")[4];
-        btn5.setAttribute("mode", "potato");
+        var btn = document.getElementsByTagName("button");
+        btn[0].setAttribute("mode", "potato");
+        btn[1].setAttribute("mode", "potato");
+        btn[2].setAttribute("mode", "potato");
+        btn[3].setAttribute("mode", "potato");
+        btn[4].setAttribute("mode", "potato");
+        btn[5].setAttribute("mode", "potato");
+        btn[6].setAttribute("mode", "potato");
 
         /* setting menu */
         var settings = document.getElementById('settings-menu');
@@ -158,24 +178,25 @@
     }
 
     function dark() {
+        window.localStorage.setItem('theme', 'dark');
         var app = document.getElementsByTagName("BODY")[0];
         app.setAttribute("data-light-mode", "dark");
+        var bg = document.getElementById("bg");
+        bg.style.background = 'none';
         var circle = document.getElementById('circle');
         circle.style.backgroundColor = '#333';
         circle.style["boxShadow"] = '0 0 10px 10px white';
         circle.style.border = '5px solid white';
 
         /* buttons */
-        var btn1 = document.getElementsByTagName("button")[0];
-        btn1.setAttribute("mode", "dark");
-        var btn2 = document.getElementsByTagName("button")[1];
-        btn2.setAttribute("mode", "dark");
-        var btn3 = document.getElementsByTagName("button")[2];
-        btn3.setAttribute("mode", "dark");
-        var btn4 = document.getElementsByTagName("button")[3];
-        btn4.setAttribute("mode", "dark");
-        var btn5 = document.getElementsByTagName("button")[4];
-        btn5.setAttribute("mode", "dark");
+        var btn = document.getElementsByTagName("button");
+        btn[0].setAttribute("mode", "dark");
+        btn[1].setAttribute("mode", "dark");
+        btn[2].setAttribute("mode", "dark");
+        btn[3].setAttribute("mode", "dark");
+        btn[4].setAttribute("mode", "dark");
+        btn[5].setAttribute("mode", "dark");
+        btn[6].setAttribute("mode", "dark");
 
         /* setting menu */
         var settings = document.getElementById('settings-menu');
@@ -188,28 +209,30 @@
         document.getElementById('title').style.color = 'white';
         document.getElementById('phaseDisplay').style.color = 'white';
         document.getElementById('settings-menu').style.display = 'none';
+        document.getElementById('task-menu').style.color='#333';
 
     }
 
     function light() {
+        window.localStorage.setItem('theme', 'light');
         var app = document.getElementsByTagName("BODY")[0];
         app.setAttribute("data-light-mode", "light");
+        var bg = document.getElementById("bg");
+        bg.style.background = 'none';
         var circle = document.getElementById('circle');
         circle.style.backgroundColor = 'white';
         circle.style["boxShadow"] = '0 0 10px 10px #333';
         circle.style.border = '5px solid #333';
 
         /* resset and start button */
-        var btn1 = document.getElementsByTagName("button")[0];
-        btn1.setAttribute("mode", "light");
-        var btn2 = document.getElementsByTagName("button")[1];
-        btn2.setAttribute("mode", "light");
-        var btn3 = document.getElementsByTagName("button")[2];
-        btn3.setAttribute("mode", "light");
-        var btn4 = document.getElementsByTagName("button")[3];
-        btn4.setAttribute("mode", "light");
-        var btn5 = document.getElementsByTagName("button")[4];
-        btn5.setAttribute("mode", "light");
+        var btn = document.getElementsByTagName("button");
+        btn[0].setAttribute("mode", "light");
+        btn[1].setAttribute("mode", "light");
+        btn[2].setAttribute("mode", "light");
+        btn[3].setAttribute("mode", "light");
+        btn[4].setAttribute("mode", "light");
+        btn[5].setAttribute("mode", "light");
+        btn[6].setAttribute("mode", "light");
 
         /* setting menu */
         var settings = document.getElementById('settings-menu');
@@ -226,6 +249,7 @@
     function displayTasks() {
         document.getElementById('task-menu').style.display = 'block';
     }
+
     function mute() {
         const volumeIcon = document.getElementById('volume-icon');
         volumeIcon.src = "img/volume-mute.png";
@@ -233,4 +257,3 @@
         volume.value = 0;
     }
 </script>
-
